# super_translate

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  Caddyfile  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
app/: __init__.py  main.py
app/api/: papers.py
app/core/: access.py  config.py  database.py  rate_limit.py
app/models/: paper.py
app/services/: layout_fix.py  library.py  notify.py  pdf_sanitizer.py  translator.py
app/static/: index.html
app/static/css/: style.css
app/static/js/: app.js
docs/: DEPLOYMENT.md  TUTORIAL.zh-CN.md
pdf_zh_translator/: __init__.py  cli.py  corpus.json  corpus.py  editable_figures.py  golden_eval.py  layout_profiles.py  ocr.py  pdf_layout.py  translators.py  visual_qa.py
pdf_zh_translator/corpora/: ai_conferences.json  top_venue_tracks.json
scripts/: backup_data.sh  start_server.sh
tests/: test_access.py  test_api_integration.py  test_cli_corpus.py  test_cli_editable_figures.py  test_cli_layout.py  test_corpus.py  test_database_pragmas.py  test_editable_figures.py  test_golden_eval.py  test_kimi_support.py  test_layout_fix.py  test_layout_profiles.py  test_library.py  test_native_engine.py  test_notify.py  test_ocr.py  test_papers_api.py  test_pdf_layout_e2e.py  test_pdf_layout_gutter.py  test_pdf_layout_preserve.py  test_pdf_sanitizer.py  test_progress_and_ui.py  test_rate_limit.py  test_translator.py  test_translators.py  test_visual_qa.py
