[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "paper-china"
version = "0.3.1"
description = "Local AI-powered paper reading + Chinese translation system"
readme = "README.md"
# AGPL-3.0 is required: the app links pdf2zh and PyMuPDF (both AGPL-3.0).
license = { text = "AGPL-3.0-or-later" }
requires-python = ">=3.10"
dependencies = [
    "pdf2zh>=1.8",
    # The app imports fitz directly (layout fix, sanitizer, library scans);
    # pdf2zh 1.9.10 requires pymupdf<1.25.3.
    "pymupdf>=1.24,<1.25.3",
    # 3.1.129 drops TextTranslateRequest, which pdf2zh 1.9.10 imports at startup.
    "tencentcloud-sdk-python-tmt==3.1.121",
    "fastapi>=0.104",
    "uvicorn[standard]>=0.24",
    "sqlalchemy[asyncio]>=2.0",
    "aiosqlite>=0.19",
    "python-multipart>=0.0.6",
    "jinja2>=3.1",
    "aiofiles>=23.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "httpx>=0.25",
    "ruff>=0.1",
]

[project.scripts]
paper-china = "app.main:cli"

[tool.setuptools.packages.find]
include = ["app*", "pdf_zh_translator*"]

[tool.setuptools.package-data]
pdf_zh_translator = ["*.json", "corpora/*.json"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
